feat: rebuild music panel workspace